--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -2,9 +2,9 @@ server:
   port: 8089
 spring:
   datasource:
-    url: jdbc:mysql://mysql:3306/heima?useSSL=false
+    url: jdbc:mysql://192.168.223.130:3306/heima?useSSL=false
     username: root
-    password: 123
+    password: 123456
     driver-class-name: com.mysql.jdbc.Driver
 logging:
   level:
